partly change main desc

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1338,6 +1338,11 @@ textarea {
   color: black;
 }
 
+.weekends-subtitle{
+  margin-top: 10px;
+  font-size: 22px;
+}
+
 .weekends-mentor-container{
   display: flex;
   margin-bottom: 20px;
