--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -24,12 +24,50 @@
                 <div class="weekends-subtitle">28 - 30 Σεπτεμβρίου 2018</div>
                 <div id="overview">
                 </br>
-                    <p><strong>Έχετε μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές  που θέλετε να προωθήσετε ή ένα πρόβλημα που θέλετε να λύσετε, αλλά δεν ξέρετε από πού να ξεκινήσετε ή από ποιον να ξεκινήσετε;</strong></p>
-                    <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσετε μια ομάδα, να δημιουργήσετε το πρωτότυπο της ιδέας σας, να επικυρώσετε την επιχειρηματική σας ιδέα και να λάβετε πληροφορίες από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων, όλα σε ένα Σαββατοκύριακο.</p>
+                    <p><strong>Έχεις μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές και θέλεις να την προωθήσεις, ένα πρόβλημα που θέλεις να λύσεις αλλά δεν ξέρεις από πού να ξεκινήσεις;</strong></p>
+                    <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσεις ομάδα, να δημιουργήσεις το πρωτότυπο, να επικυρώσεις την βιωσιμότητα της ιδέας σου και να ακούσεις συμβουλές από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων.</p></br>
 
-                    <h4>Τι πρέπει να φέρετε</h4>
-                    <p>Πολλή ενέργεια! Θα θέσετε τη δική σας ιδέα ή θα ακούσετε άλλους, κατόπιν θα ψηφίσετε τις πιο ενδιαφέρουσες ιδέες και θα διαμορφώσετε ομάδες με διαφορετικά σύνολα δεξιοτήτων. Μπορείτε να έρθετε με φίλους σας, αλλά καλύτερα να συμμετέχετε σε ξεχωριστές ομάδες. Θυμηθείτε, τα πάντα είναι θέμα ομάδας.</p>
-                    <p>Η ιδέα που βάζετε και το πρόβλημα που θέτετε για επίλυση θα πρέπει να καλύψει θέματα σχετικά με τις αστικές μεταφορές και την χρήση νέων τεχνολογιών σε αυτές. Κατά τη διάρκεια του Σαββατοκύριακου, θα κληθείτε να δημιουργήσετε ένα πρωτότυπο δηλαδή ένα ελάχιστο βιώσιμο προϊόν που θα ταιριάζει στις ανάγκες του πελάτη-στόχου σας. Θα λάβετε καθοδήγηση κα συμβουλές, θα επαναπροσδιορίσετε την ιδέα σας και πιθανόν να διαμορφώσετε μια νέα προσέγγισή εξ ολοκλήρου!</p>
+                    <h3>Τι πρέπει να φέρεις</h3>
+                    <p>Πολλή ενέργεια! Αρχικά θα παρουσιάσεις την ιδέα σου και θα ακούσεις άλλους να παρουσιάζουν, κατόπιν θα ψηφίσεις τις πιο ενδιαφέρουσες ιδέες και θα δημιουργήσεις ομάδα. Μπορείς να έρθεις με φίλους σου, αλλά καλύτερα να συμμετέχετε σε ξεχωριστές ομάδες.</p>
+
+                    <p>Το πρόβλημα που θέτεις προς επίλυση πρέπει να καλύπτει θέματα σχετικά με τις αστικές μεταφορές και την χρήση νέων τεχνολογιών. Μπορείς να δεις αναλυτικά τις θεματικές <a data-toggle="modal" href="#subjects">εδώ</a>. Κατά τη διάρκεια του Σαββατοκύριακου, θα κληθείς να δημιουργήσεις ένα πρωτότυπο - δηλαδή ένα ελάχιστο βιώσιμο προϊόν - που θα ταιριάζει στις ανάγκες του πελάτη-στόχου σου. Θα έχεις καθοδήγηση κα συμβουλές, θα επαναπροσδιορίσεις την ιδέα σου και πιθανόν να διαμορφώσεις μια εξ ολοκλήρου νέα προσέγγισή</p>
+                    <div id="subjects" class="modal fade" role="dialog">
+                      <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title">Θεματικές</h4>
+                        </div>
+                        <div class="modal-body small">
+                         <h2>1. Street Light Management</h2>
+                         <p>Energy conservation is currently a major European priority, and street lighting is a significant source of energy expenditure for municipalities.  We’re seeking idea to mitigate the cost and energy consumption of street lighting using innovative telematics solutions, without compromising the safety of citizens.  Idea can include activation/deactivation of lighting by detecting people and vehicles, dynamic light adjusting depending on surrounding lighting, and other such techniques.</p>
+                         <h2>2. Intelligent Street Signs</h2>
+                         <p>Street Signs are commonplace on major roads, but typically are limited in the information they provide, usually only serving the needs of a single road authority.  Using IoT and interconnecting various agencies however, simple signs providing road/weather information can be turned into a life-saving technology, ex. By alerting drivers to incoming emergency service vehicles.  We’re seeking proposals that can best utilise the existing technology or expanding upon it, that can also utilise integrated services in innovative ways.</p>
+                         <h2>3. Intelligent Parking</h2>
+                         <p>City parking has long been an issue, for citizens and municipalities alike.  Lack of knowledge regarding parking spaces causes increased hotspots of congestion, increased emissions and loss of time.  For the government, keeping track of paid vs unpaid parked vehicles is also a challenge.  We’re seeking innovate solutions that tackle this issue on both fronts – provide information to citizens regarding real-time availability of parking spaces whilst also providing an automated tool for the government to collect parking fees and remotely issue fines.</p>
+                         <h2>4. Smart Traffic Violation Monitoring</h2>
+                         <p>Road violations are a major source of concern for governments, contributing to increased congestion as well as increased number of road accidents.  Problems vary considerably, from traffic light and road sign violations, to parking infractions (parking in a road lane reserved for traffic, double-parking, etc), as well as bus lane violations.  We’re seeking solutions to tackle as many of these issues as possible, with a strong preference for expandability to include additional violation monitoring in future.</p>
+                         <h2>5. Smart City Digital Payment</h2>
+                         <p>Digital transactions provide increased flexibility, security and speed over traditional payments.  Due to a lack of coordination and oversight however, situations are common where multiple incompatible methods can exist within a city, forcing citizens to juggle multiple e-Wallets.  We’re seeking solutions that allow multiple independent parties to utilise the same digital wallet, providing them all with the ability to process transactions securely and with easy conversion to fiat currency, whilst also giving them access to the statistics and data they would receive from owning their own proprietary system. This solution will first be rolled out in a variety of organisations run by, or in cooperating with the government (such as public transport, museums, etc). The system should utilise mobile phone technology wherever possible or else use cards, but must be contactless.</p>
+                         <h2>6. Smart Mobility</h2>
+                         <p>Designing road networks, traffic management (such as green waves), as well as public transport, are processes that rely on significant guesswork.  Once put into practice, they can often be very difficult or even impossible to alter, meaning mistakes are costly and long-term.  It is therefore imperative to find innovative ways of collecting data before projects are implemented, accurately determine needs and simulate the results of large-scale mobility projects.  We’re seeking proposals that can provide powerful tools to mobility planners (road designers, public transport organisations, etc), that can help them determine the current flow of citizens and traffic, and provide tools for designing future projects in order to minimise travel times, bottlenecks, and have fewer transits.</p>
+                         <h2>7. E-Government</h2>
+                         <p>We’re seeking proposals that tackle two major issues regarding citizen interactions with government organisations: 1) Opaqueness, 2) Interconnectivity between various government branches.
+                         More often than not there is no clear roadmap provided to citizens to accomplish certain tasks (acquire paperwork, apply for licenses, benefits, healthcare, visas, etc).  Accomplishing such tasks often require citizens to interact with multiple government branches, most of which seem to function independently with their own set of needs that can on occasion, contradict each other.  We’re seeking solutions that not only provide clear guidelines to citizens online, along with step-by-step roadmaps to accomplishing their goals, requirements, etc, but also streamline government interactivity, minimising wait times and trips of citizens.</p>
+                         <h2>8. Platooning</h2>
+                         <p>Many businesses rely on the mass transportation of goods, and frequently timely deliveries are vital to the health of these businesses.  Coordination between the various players is poor however, leading to a lack of coordination regarding the movement of goods-carrying vehicles.  This can result in serious congestion, both within and outside of cities.  Platooning is a method of coordinating goods transports so they are synchronised, meaning vehicles travel in groups greatly improving congestion, and have access to various areas at specific times.  Such a solution can not only improve the reliability of transportation times, but significantly alleviate congestion as well.  We’re seeking innovate solutions to help coordinate and improve the state of goods transport.</p>
+                         <h2>9. Smart City Drones</h2>
+                         <p>Drones are a powerful tool that open up new avenues for technology and data acquisition technologies.  However, implementation is slow, hampered by the risks they pose if used recklessly.  We’re seeking innovate government-run solutions utilising this technology, targeting (but not limited to), problems such as traffic monitoring, pollution, accidents, fire, parking, etc.  Solutions proposed should be multifaceted, targeting multiple problems simultaneously, and be expandable in future, both in terms of swarm sizes as well as sensors/data acquisition.  Swarms of drones must be tracked precisely and provide easy coordination with relevant aviation authorities.</p>
+                         <h2>10. Smart Waste Management</h2>
+                         <p>Waste management is a constant challenge for every authority.  Lack of information regarding amounts of waste at a large number of locations, make fleet management of disposal vehicles a significant challenge.  Simultaneously, it is imperative for governments to encourage recycling, though citizens have little imperative to do so.  We’re seeking solutions that tackle waste management on multiple fronts: encourage citizens to recycle by making it easier, more accessible as well as raise awareness, and also find innovate solutions for waste-detection, so that fleets of disposal vehicles can be utilised more efficiently.</p>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                     <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές είναι μια μοναδική εμπειρία που περιλαμβάνει:</p>
                     <ul>
                         <li>7 πλήρη (και νόστιμα) γεύματα κατά τη διάρκεια του Σαββατοκύριακου</li>
@@ -172,7 +210,7 @@
                               </div>
                               <div class="weekends-schedule-content-item">
                                   <div class="weekends-schedule-content-item-time">6:15πμ</div>
-                                  <div class="weekends-schedule-content-item-what">Παρουσίαση συμμετεχόντων  <small> - 1’ ομιλία από το κάθε συμμετέχοντα</small></div>
+                                  <div class="weekends-schedule-content-item-what">Παρουσίαση συμμετεχόντων - 1’ ομιλία από το κάθε συμμετέχοντα</div>
                               </div>
                               <div class="weekends-schedule-content-item">
                                   <div class="weekends-schedule-content-item-time">6:45πμ</div>
@@ -276,7 +314,7 @@
                     <ul>
                       <li class="h3">1<sup>η</sup> Θέση – €900 Μετρητά</li></br>
                       <li class="h4">2<sup>η</sup> Θέση – €300 Μετρητά</li></br>
-                      <li class="h4">3<sup>η</sup> Θέση – €300 Μετρητά</li>
+                      <li class="h5">3<sup>η</sup> Θέση – €300 Μετρητά</li>
                     </ul>
                   </br>
                 <p class="small">*  Εκτός από το χρηματικό έπαθλο οι ομάδες που θα αποφασίσουν να προχωρήσουν περεταίρω στην υλοποίηση της ιδέας τους διασφαλίζουν συμβουλευτική υποστήριξη (mentoring) από τον χορηγό των χρηματικών βραβείων Link Technologies S.A.</p>
@@ -284,7 +322,7 @@
                 </br>
                 <h3>Κριτήρια αξιολόγησης</h3>
                 </br>
-                 <p>Οι προτάσεις –ιδέες  θεματικά πρέπει να ανήκουν στον τομέα των καινοτόμων αστικών μεταφορών προσώπων και αγαθών. Η συγκεκριμένη απαίτηση δεν βαθμολογείται αλλά θα λειτουργήσει σαν προϋπόθεση για να αξιολογηθεί μια πρόταση - ιδέα.</p>
+                 <p>Οι προτάσεις – ιδέες θεματικά πρέπει να ανήκουν στον τομέα των καινοτόμων αστικών μεταφορών προσώπων και αγαθών. Η συγκεκριμένη απαίτηση δεν βαθμολογείται αλλά θα λειτουργήσει σαν προϋπόθεση για να αξιολογηθεί μια πρόταση - ιδέα.</p>
                     <ul>
                         <li><strong>Εφικτότητα</strong> (Feasibility):<small> Η πρόταση – ιδέα θα πρέπει να είναι εφαρμόσιμη λαμβάνοντας υπόψη τεχνολογικούς και νομικούς περιορισμούς.</small></li>
                         <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small> Η πρόταση – ιδέα θα πρέπει να έχει θετικό ή ουδέτερο περιβαλλοντικό αποτύπωμα σε όλο το κύκλο ζωής της.</small></li>
@@ -295,9 +333,9 @@
               <div id="sponsors">
                </br></br>
                <h2>Χορηγοί</h2>
+               <a href="http://link-tech.gr/" target="_blank"><img class="weekends-sponsor" src="/static/main/img/weekends/mobility/link-logo.png"></a>
                <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/OSETH-logo.png">
-               <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/link-logo.png">
-               <img class="weekends-sponsor" src="/static/main/img/weekends/mobility/okthess-logo.png">
+               <a href="https://okthess.gr/" target="_blank"><img class="weekends-sponsor" src="/static/main/img/weekends/mobility/okthess-logo.png"></a>
               </div>
               <div class="form" id="register">
                   <form action="{% url 'main:weekends' %}" method="post">
@@ -343,7 +381,7 @@
                               </div>
                               <div class="modal-body small">
                                 <p><strong>1. H αποδοχή και λήψη των βραβείων περιλαμβάνει την υποχρέωση πρώτης διερεύνησης χρηματοδότησης του επενδυτικού τους σχεδίου, από την Link Technologies S.A.</strong></p>
-                                <p><strong>2.</strong> Δικαίωμα συμμετοχής έχουν όλοι όσοι ενδιαφέρονται. Προτείνεται η συμμετοχή σε όσους είναι σχετικοί με το αντικείμενο των μεταφορών</p>
+                                <p><strong>2.</strong> Δικαίωμα συμμετοχής έχουν όλοι όσοι ενδιαφέρονται. Προτείνεται η συμμετοχή σε όσους είναι σχετικοί με το αντικείμενο των μεταφορών.</p>
                                 <p><strong>3.</strong> Οι συμμετέχοντες θα μετέχουν σε ομάδες με μέγιστο αριθμό τα έξι (6) άτομα.</p>
                                 <p><strong>4.</strong> Η προτεινόμενη λύση θα πρέπει να αναπτυχθεί κατά τη διάρκεια του διαγωνισμού και μόνο ενόσω τα μέλη της ομάδας βρίσκονται στο χώρο διενέργειας του διαγωνισμού.</p>
                                 <p><strong>5.</strong> Σε περίπτωση που η λύση περιλαμβάνει κώδικα εφαρμογής, αυτός θα πρέπει να ανεβαίνει σταδιακά σε repository της Ομάδας στο GitHub. Σε περίπτωση που το έργο είναι πακέτο λογισμικού που προέρχεται από compilation (πχ Mobile App, Software κτλ) εκτός από τον πηγαίο κώδικα που δημιουργεί το compiled αρχείο θα πρέπει στο GitHub να ανέβει και το ίδιο το compiled αρχείο. Εφαρμογές που θα έχουν γίνει με ελάχιστα μόνο commits δύναται να ακυρωθούν από την επιτροπή.</p>
