Finalize main desc

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -70,15 +70,12 @@
 
                     <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές είναι μια μοναδική εμπειρία που περιλαμβάνει:</p>
                     <ul>
-                        <li>7 πλήρη (και νόστιμα) γεύματα κατά τη διάρκεια του Σαββατοκύριακου</li>
-                        <li>Επικοινωνία με καταπληκτικούς συμβούλους</li>
+                        <li>Επικοινωνία με έμπειρους συμβούλους και ανθρώπους της αγοράς</li>
                         <li>Ένα νέο δίκτυο ανθρώπων προερχόμενων από τον χώρο των μεταφορών, προγραμματιστές, σχεδιαστές και επιχειρηματίες πρόθυμοι, όπως εσείς, να αλλάξουν τον κόσμο.</li>
-                        <li>Όλο το διαδίκτυο και τον καφέ που μπορείτε να καταναλώσετε.</li>
+                        <li>Ταχύτατη σύνδεση στο διαδίκτυο, φαγητό και απεριόριστο καφέ.</li>
                     </ul>
 
-                    <p>Αν έχετε ερωτήσεις, μη διστάσετε να επικοινωνήσετε μαζί μας στο REFERENCE EMAIL</p>
-                    <p>Μην περιμένετε πια και δηλώστε συμμετοχή στο Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές!</p>
-                    <p>Καμία άλλη συζήτηση, τώρα μόνο δράση!</p>
+                    <p>Αν έχετε επιπλέον ερωτήσεις, μη διστάσετε να επικοινωνήσετε μαζί μας στο admin@okthess.gr με θέμα (ΣΚΑΜ).</p>
                 </div>
                 <br>
               <div id="mentors">
