--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -39,27 +39,69 @@
                           <h4 class="modal-title">Θεματικές</h4>
                         </div>
                         <div class="modal-body small">
-                         <h2>1. Street Light Management</h2>
-                         <p>Energy conservation is currently a major European priority, and street lighting is a significant source of energy expenditure for municipalities.  We’re seeking idea to mitigate the cost and energy consumption of street lighting using innovative telematics solutions, without compromising the safety of citizens.  Idea can include activation/deactivation of lighting by detecting people and vehicles, dynamic light adjusting depending on surrounding lighting, and other such techniques.</p>
-                         <h2>2. Intelligent Street Signs</h2>
-                         <p>Street Signs are commonplace on major roads, but typically are limited in the information they provide, usually only serving the needs of a single road authority.  Using IoT and interconnecting various agencies however, simple signs providing road/weather information can be turned into a life-saving technology, ex. By alerting drivers to incoming emergency service vehicles.  We’re seeking proposals that can best utilise the existing technology or expanding upon it, that can also utilise integrated services in innovative ways.</p>
-                         <h2>3. Intelligent Parking</h2>
-                         <p>City parking has long been an issue, for citizens and municipalities alike.  Lack of knowledge regarding parking spaces causes increased hotspots of congestion, increased emissions and loss of time.  For the government, keeping track of paid vs unpaid parked vehicles is also a challenge.  We’re seeking innovate solutions that tackle this issue on both fronts – provide information to citizens regarding real-time availability of parking spaces whilst also providing an automated tool for the government to collect parking fees and remotely issue fines.</p>
-                         <h2>4. Smart Traffic Violation Monitoring</h2>
-                         <p>Road violations are a major source of concern for governments, contributing to increased congestion as well as increased number of road accidents.  Problems vary considerably, from traffic light and road sign violations, to parking infractions (parking in a road lane reserved for traffic, double-parking, etc), as well as bus lane violations.  We’re seeking solutions to tackle as many of these issues as possible, with a strong preference for expandability to include additional violation monitoring in future.</p>
-                         <h2>5. Smart City Digital Payment</h2>
-                         <p>Digital transactions provide increased flexibility, security and speed over traditional payments.  Due to a lack of coordination and oversight however, situations are common where multiple incompatible methods can exist within a city, forcing citizens to juggle multiple e-Wallets.  We’re seeking solutions that allow multiple independent parties to utilise the same digital wallet, providing them all with the ability to process transactions securely and with easy conversion to fiat currency, whilst also giving them access to the statistics and data they would receive from owning their own proprietary system. This solution will first be rolled out in a variety of organisations run by, or in cooperating with the government (such as public transport, museums, etc). The system should utilise mobile phone technology wherever possible or else use cards, but must be contactless.</p>
-                         <h2>6. Smart Mobility</h2>
-                         <p>Designing road networks, traffic management (such as green waves), as well as public transport, are processes that rely on significant guesswork.  Once put into practice, they can often be very difficult or even impossible to alter, meaning mistakes are costly and long-term.  It is therefore imperative to find innovative ways of collecting data before projects are implemented, accurately determine needs and simulate the results of large-scale mobility projects.  We’re seeking proposals that can provide powerful tools to mobility planners (road designers, public transport organisations, etc), that can help them determine the current flow of citizens and traffic, and provide tools for designing future projects in order to minimise travel times, bottlenecks, and have fewer transits.</p>
-                         <h2>7. E-Government</h2>
-                         <p>We’re seeking proposals that tackle two major issues regarding citizen interactions with government organisations: 1) Opaqueness, 2) Interconnectivity between various government branches.
-                         More often than not there is no clear roadmap provided to citizens to accomplish certain tasks (acquire paperwork, apply for licenses, benefits, healthcare, visas, etc).  Accomplishing such tasks often require citizens to interact with multiple government branches, most of which seem to function independently with their own set of needs that can on occasion, contradict each other.  We’re seeking solutions that not only provide clear guidelines to citizens online, along with step-by-step roadmaps to accomplishing their goals, requirements, etc, but also streamline government interactivity, minimising wait times and trips of citizens.</p>
-                         <h2>8. Platooning</h2>
-                         <p>Many businesses rely on the mass transportation of goods, and frequently timely deliveries are vital to the health of these businesses.  Coordination between the various players is poor however, leading to a lack of coordination regarding the movement of goods-carrying vehicles.  This can result in serious congestion, both within and outside of cities.  Platooning is a method of coordinating goods transports so they are synchronised, meaning vehicles travel in groups greatly improving congestion, and have access to various areas at specific times.  Such a solution can not only improve the reliability of transportation times, but significantly alleviate congestion as well.  We’re seeking innovate solutions to help coordinate and improve the state of goods transport.</p>
-                         <h2>9. Smart City Drones</h2>
-                         <p>Drones are a powerful tool that open up new avenues for technology and data acquisition technologies.  However, implementation is slow, hampered by the risks they pose if used recklessly.  We’re seeking innovate government-run solutions utilising this technology, targeting (but not limited to), problems such as traffic monitoring, pollution, accidents, fire, parking, etc.  Solutions proposed should be multifaceted, targeting multiple problems simultaneously, and be expandable in future, both in terms of swarm sizes as well as sensors/data acquisition.  Swarms of drones must be tracked precisely and provide easy coordination with relevant aviation authorities.</p>
-                         <h2>10. Smart Waste Management</h2>
-                         <p>Waste management is a constant challenge for every authority.  Lack of information regarding amounts of waste at a large number of locations, make fleet management of disposal vehicles a significant challenge.  Simultaneously, it is imperative for governments to encourage recycling, though citizens have little imperative to do so.  We’re seeking solutions that tackle waste management on multiple fronts: encourage citizens to recycle by making it easier, more accessible as well as raise awareness, and also find innovate solutions for waste-detection, so that fleets of disposal vehicles can be utilised more efficiently.</p>
+                          <h2>1. ΕΞΥΠΝΕΣ ΠΙΝΑΚΙΔΕΣ</h2>
+                          <p>H χρήση των οδικών σημάτων είναι εκτενής τόσο εντός πόλεων όσο και σε μεγάλους δρόμους ταχείας κυκλοφορίας. Η παρουσία τους προωθεί την
+                          συμμόρφωση των οδηγών προς τον κώδικα οδικής κυκλοφορίας, εξυπηρετώντας έτσι τις ανάγκες της οδικής αρχής.
+                          Παρουσιάζεται, με την χρήση της τεχνολογίας του Internet of Things, η δυνατότητα μετατροπής των απλών πινακίδων σε πηγές άμεσης πληροφόρησης για τους
+                          οδηγούς για ζητήματα που αφορούν στην οδική ασφάλεια και συμπεριφορά σε πραγματικό χρόνο, όπως επικίνδυνες καιρικές συνθήκες, ατυχήματα που έχουν
+                          συμβεί, διέλευση οχημάτων έκτακτης ανάγκης κ.α. Το ζητούμενο είναι λοιπόν η ανεύρεση καινοτόμων λύσεων και εφαρμογών οι οποίες, αξιοποιώντας τις ήδη
+                          υπάρχουσες υποδομές ή διευρύνοντάς τες, θα μπορούσαν να αποβούν σωτήριες για τους οδηγούς στους ελληνικούς δρόμους.</p>
+                          <h2>2. ΕΞΥΠΝΟ ΠΑΡΚΙΝΓΚ</h2>
+                          <p>Η παράνομη στάθμευση και η εν γένει έλλειψη χώρων στάθμευσης αποτελούν χρόνια προβλήματα για τους πολίτες και τους δήμους. Τα προβλήματα συνίστανται
+                          μεταξύ άλλων στην έλλειψη γνώσης για τους ελεύθερους χώρους στάθμευσης από την πλευρά των πολιτών και στην αδυναμία επιτήρησης των θέσεων από την
+                          εκάστοτε δημοτική αρχή. Αυτό προκαλεί αντίστοιχα αύξηση των σημείων συμφόρησης στο οδικό δίκτυο, απώλεια χρόνου και απώλεια εσόδων. Επομένως
+                          οποιαδήποτε τεχνολογική λύση οφείλει να αντιμετωπίσει και τα δύο μέτωπα ταυτόχρονα: να παρέχει πληροφόρηση για την διαθεσιμότητα των κενών θέσεων
+                          στους οδηγούς ενώ παράλληλα να παρέχει στην δημοτική αρχή ένα χρήσιμο εργαλείο για την συλλογή των τελών στάθμευσης και την έκδοση προστίμων εξ αποστάσεως.</p>
+                          <h2>3. ΕΞΥΠΝΗ ΔΙΑΧΕΙΡΙΣΗ ΤΗΣ ΚΥΚΛΟΦΟΡΙΑΣ</h2>
+                          <p>Οι παραβιάσεις του Κ.Ο.Κ. αποτελούν σήμερα το πιο σημαντικό πρόβλημα για την οδική ασφάλεια καθώς είναι η κύρια αιτία πρόκλησης τροχαίων ατυχημάτων. Η
+                          ποικιλομορφία των παραβάσεων, από τις παραβιάσεις φωτεινού σηματοδότη και οδικών σημάτων μέχρι και την παράνομη στάθμευση σε λεοφωρειολωρίδα ή την
+                          διπλή στάθμευση, συμβάλλει στην αυξημένη κίνηση στους δρόμους, στον εκνευρισμό των οδηγών καθώς και στην πρόκληση ατυχημάτων με μεγάλο υλικό
+                          κόστος ή κόστος για την ανθρώπινη ζωή. Επιδιώκεται εν τέλει η ανεύρεση τεχνολογικών λύσεων για την παρακολούθηση τέτοιων παραβιάσεων, την άμεση
+                          διευθέτησή τους και την εν γένει επιτήρηση.</p>
+                          <h2>4. ΕΞΥΠΝΗ ΚΙΝΗΤΙΚΟΤΗΤΑ</h2>
+                          <p>Ο σχεδιασμός των οδικών συγκοινωνιών είναι μια πολύπλοκη διαδικασία που είναι δύσκολο να αλλάξει και να προσαρμοστεί σε συνθήκες που προκύπτουν καθώς
+                          στηρίζεται σε εικασίες. Η αστική ανάπτυξη δεν μπορεί να προβλεφθεί με ακρίβεια με αποτέλεσμα να υπάρχει αύξηση της κυκλοφοριακής συμφόρησης σε σημεία του
+                          οδικού δικτύου που δεν είχαν συμπεριληφθεί στον αρχικό σχεδιασμό και ανεπαρκής κάλυψη των δημοσίων συγκοινωνιών. Είναι επιτακτική λοιπόν η παροχή
+                          λύσεων και στα τρία στάδια του σχεδιασμού: Στην συλλογή των αρχικών δεδομένων και στατιστικών της κυκλοφορίας, στον ακριβή προσδιορισμό των
+                          αναγκών αυτής και στην προσομοίωση πολλαπλών σεναρίων των αποτελεσμάτων του εκάστοτε έργου έτσι ώστε να υπάρχει κάλυψη για μελλοντικές ανάγκες.</p>
+                          <h2>5. ΧΩΡΟΣ ΕΙΚΟΝΙΚΗΣ ΦΟΡΤΩΣΗΣ</h2>
+                          <p>Ένα σοβαρό ζήτημα που καλούνται να αντιμετωπίσουν οι μεταφορικές εταιρίες είναι η ανεύρεση θέσεων φόρτωσης - εκφόρτωσης στο οδικό δίκτυο εντός του
+                          αστικού συγκροτήματος. Συχνά τα οχήματα αναγκάζονται να σταθμεύουν σε δρόμους που είναι πολυσύχναστοι, παρακωλύοντας την κυκλοφορία, ή να
+                          σπαταλούν πολύ χρόνο για ανεύρεση θέσης στάθμευσης. Λύση στο πρόβλημα αυτό μπορεί να δώσει μια εφαρμογή που θα δίνει στα επαγγελματικά οχήματα τη
+                          δυνατότητα να κάνουν κράτηση για έναν χώρο εικονικής φόρτωσης (Virtual Loading Bay) για την στιγμή που θα τον χρειαστούν σε περιοχές της πόλης όπου ο χώρος
+                          είναι περιορισμένος για τη στάθμευση των οχημάτων. Επίσης, με τη χρήση της συγκεκριμένης εφαρμογής υπάρχει η δυνατότητα επέκτασης του χρόνου
+                          φορτοεκφόρτωσης (Virtual Loading Extension) σε περιοχές στις οποίες παρόλο που επιτρέπεται η φορτοεκφόρτωση ο χρόνος για να πραγματοποιηθεί είναι αρκετά
+                          περιορισμένος.</p>
+                          <h2>6. ΣΥΝΕΡΓΑΤΙΚΑ ΕΞΥΠΝΑ ΣΥΣΤΗΜΑΤΑ</h2>
+                          <p>Η κυκλοφοριακή συμφόρηση είναι το κυριότερο πρόβλημα των μεγάλων αστικών κέντρων του σήμερα. Παρά τις προσπάθειες που γίνονται από τους αρμόδιους
+                          φορείς οι επιπτώσεις στην καθημερινότητα των πολιτών παραμένουν ισχυρές. Θετική επίδραση προς αυτή την κατεύθυνση μπορεί να έχει η δημιουργία
+                          εφαρμογών που χρησιμοποιούν συστήματα ITS. Τα ΙTS είναι συστήματα τα οποία επιτρέπουν στο όχημα να επικοινωνεί ασύρματα με άλλο όχημα ή με μια υποδομή.
+                          Τα κυριότερα οφέλη αυτών των συστημάτων είναι η βελτίωση της διαχείρισης της κυκλοφορίας, η αύξηση της κυκλοφοριακής απόδοσης, η λιγότερη συμφόρηση στα
+                          οδικά δίκτυα και η μείωση των ρυπογόνων εκπομπών. Τα οχήματα και η υποδομή που είναι εφοδιασμένα με ITS μπορούν, για παράδειγμα, να διαβιβάσουν μια
+                          προειδοποίηση ο ένας στον άλλο, μετά από την οποία οι οδηγοί ενημερώνονται έγκαιρα για την επικείμενη κυκλοφοριακή κατάσταση ώστε να λάβουν τις
+                          απαραίτητες ενέργειες για να αποφευχθούν πιθανές βλάβες.</p>
+                          <h2>7. ΣΥΓΧΡΟΝΟΙ ΚΟΜΒΟΙ ΜΕΤΕΠΙΒΙΒΑΣΗΣ</h2>
+                          <p>Τα μεγάλα αστικά κέντρα καλούνται όλο και πιο συχνά να ενσωματώσουν περισσότερα μέσα μαζικής μεταφοράς στο δίκτυο μετακινήσεων των κατοίκων
+                          τους. Η δημιουργία συγκοινωνιακών κόμβων αποτελεί ένα κρίσιμο τμήμα των δημοσίων συγκοινωνιών, αφού επιτρέπουν στους ταξιδιώτες να διανύουν μακρινές
+                          αποστάσεις, καθώς μειώνουν το χρόνο ταξιδιού και βελτιώνουν αισθητά την ποιότητα της παροχής υπηρεσιών. Επίσης, επιτυγχάνουν την ισχυρή συνεργασία
+                          δημόσιου και ιδιωτικού τομέα, την αποδοτική υποδομή και την υψηλή δυνατότητα απόκτησης συμπληρωματικών εσόδων (όπως χώροι στάθμευσης, εμπορικοί χώροι),
+                          καθώς και την ενσωμάτωση διαφορετικών τρόπων μεταφοράς και απαιτήσεων κινητικότητας με μειωμένο χρόνο μεταφοράς. Αναζητούνται τεχνολογικές λύσεις οι
+                          οποίες θα υποστηρίζουν την δημιουργία τέτοιων κόμβων ενσωματώνοντας όσο το δυνατόν περισσότερα μέσα μαζικής μεταφοράς (τραμ, μετρό, τρένο, επιβατηγά
+                          πλοία κ.α.)</p>
+                          <h2>8. ΤΕΛΗ ΚΥΚΛΟΦΟΡΙΑΚΗΣ ΣΥΜΦΟΡΗΣΗΣ</h2>
+                          <p>Tο ζήτημα της κυκλοφοριακής συμφόρησης στα μεγάλα αστικά κέντρα είναι πολυσύνθετο και δεν συνίσταται μόνο στην έλλειψη υποδομών. Μια συνολική
+                          λύση απαιτεί την λήψη επιμέρους μέτρων που θα συμβάλλουν στην αντιμετώπιση του. Η χρέωση για τη συμφόρηση είναι ένα τέλος που χρεώνεται στα περισσότερα
+                          αυτοκίνητα που κινούνται σε μια συγκεκριμένη ζώνη φόρτισης, κυρίως στα αστικά κέντρα, για κάποιες ώρες της ημέρας. Αυτή η οικονομική επιβάρυνση στοχεύει στη
+                          μείωση της υψηλής ροής της κυκλοφορίας και της ρύπανσης σε κεντρικές περιοχές και στην αύξηση των επενδυτικών πόρων για το εκάστοτε σύστημα μεταφορών. Τα
+                          παραπάνω επιτυγχάνονται καθώς οι κάτοικοι εξωθούνται να χρησιμοποιούν περισσότερο τα μέσα μαζικής μεταφοράς και τους εναλλακτικούς τρόπους
+                          μετακίνησης στα αστικά κέντρα όπως ποδήλατο, περπάτημα. Κρίσιμη είναι η ανάπτυξη εφαρμογών που θα μπορούν να ελέγχουν την κίνηση των οχημάτων
+                          εντός των ζωνών αποδίδοντας την χρέωση για την συμφόρηση με ορθό και άμεσο τρόπο.</p>
+                          <h2>9. ΚΟΙΝΣΕΠ ΣΤΟΝ ΤΟΜΕΑ ΤΗΣ ΚΟΙΝΟΧΡΗΣΤΗΣ ΚΙΝΗΤΙΚΟΤΗΤΑΣ</h2>
+                          <p>Ίδρυση εταιριών με την μορφή των ΚΟΙΝΣΕΠ (Κοινωνικές Συνεταιριστικές Επιχειρήσεις) που θα δραστηριοποιούνται στον τομέα των συστημάτων
+                          κοινόχρηστης κινητικότητας (Car Sharing). Οι περιαστικοί Δήμοι της Θεσσαλονίκης αποτελούν ιδανικό πεδίο για την ανάπτυξη συστημάτων κοινόχρηστων
+                          αυτοκινήτων που αποτελούν μια βιώσιμη εναλλακτική λύση έναντι στην κλασική ιδιοκτησία αυτοκινήτου. Οι μορφές που μπορούν να πάρουν είναι πολλές, κλαμπ
+                          αυτοκινήτων, παραχώρηση χρήσης του Ι.Χ. τις ώρες που δεν χρειάζεται από τον ιδιοκτήτη του κλπ. Η χρήση σύγχρονων τεχνολογιών μπορεί να επιτρέψει την
+                          λειτουργία ανάλογων συστημάτων κάνοντας φιλική την χρήση τους και λειτουργώντας καταλυτικά για την ανάπτυξη τους.</p>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
